lib/html-parser.peg
{
  var ParserUtil = require('./parser_util.js'),
    rule_parser = require('./rule-parser.js');

  next_id = 101;

  template = {
    type: 'template',
    doc: {
      type: 'document',
      imports: [],
      content: [],
      annotation: null,
      rules: [],
      errors: [],
    }
  };
}

start
  = document { return template; }

document
  = l:importlist document { template.doc.imports = template.doc.imports.concat(l); }
  / v:rulelist document { template.doc.rules = template.doc.rules.concat(v); }
  / c:content document { template.doc.content = template.doc.content.concat(c); }
  / { }

importlist
  = i:import l:importlist { return [e].concat(l); }
  / i:import { return [i]; }

import
  = "@require " modulename:module space {
    return {'type': 'import', 'module': modulename };
  }

rulelist
  = r:rule l:rulelist { return [r].concat(l); }
  / r:rule { return [r]; }

rule
  = "@verify" space ruletext:[a-zA-Z0-9\. -<>\[\]:]+ '\n' {
    return rule_parser.parse(ruletext.join(''));
  }

variable
  = name:[a-zA-Z]+ { return name.join(''); }

module
  = name:[a-zA-Z\.]+ { return name.join(""); }

macro
  = '@' macroname:[a-zA-Z0-9\.]+ '(' argument:[a-zA-Z0-9\.]+ ')' {
    return {
      type: 'macro',
      content: '@' + macroname.join(''),
      argument: argument.join('')
    };
  }
  / '@' macroname:[a-zA-Z0-9\.]+ {
    return {
      type: 'macro',
      content: '@' + macroname.join('')
    };
  }


content
  = m:macro rest:content {
    return [m].concat(rest);
  }
  / m:macro {
    return [m];
  }
  / text:[^<^@]+ rest:content {
    var node = {
      type: 'text',
      content: text.join('').trim()
    };
    return [node].concat(rest);
  }
  / text:[^<^@]+ {
    var node = {
      type: 'text',
      content: text.join('').trim()
    };
    return [node];
  }
  / e:element rest:content {
    return [e].concat(rest);
  }
  / e:element {
    return [e];
  }

opentag
  = "<" starttag:literal space? attrs:attributemap? annotation:elementannotation?">" {
    return {
      name: starttag,
      attributes: attrs === null ? {} : attrs,
      annotation: annotation
    };
  }

closetag
  = "</" endtag:literal ">" space? { return endtag }

selfclosing_tag
  = "<" tagname:literal space? attrs:attributemap? annotation:elementannotation? "/>" {
    return {
      name: tagname,
      attributes: attrs === null ? {} : attrs,
      annotation: annotation
    };
  }

element
  = e:doctype_element { return e; }
  / e:selfclosing_element { return e; }
  / e:standard_element { return e; }

doctype_element
  = "<!DOCTYPE html>" {
    return {
      id: next_id++,
      type: 'element',
      subtype: 'doctype',
      name: '!DOCTYPE',
      attributes: {'html':''},
      content: [],
      line: line()
    };
  }

standard_element
  = starttag:opentag c:content? endtag:closetag {
    if (starttag.name != endtag) {
      console.log("error " + line() + ": Start tag <" + starttag.name + ">  does not match up with end tag </" + endtag + ">")
    }
    var element = {
      id: next_id++,
      parent_id: null,
      type: 'element',
      name: starttag.name,
      attributes: starttag.attributes,
      annotation: starttag.annotation,
      content: c === null ? [] : c,
      selfclosing: false,
      line: line()
    };
    ParserUtil.setup_parent_links(element)
    return element;
  }

selfclosing_element
  = tag:selfclosing_tag {
    var element = {
      id: next_id++,
      parent_id: null,
      type: 'element',
      selfclosing: true,
      name: tag.name,
      attributes: tag.attributes,
      annotation: tag.annotation,
      content: [],
      line: line()
    };
    ParserUtil.setup_parent_links(element)
    return element;
  }

attributemap
  = a:attribute m:attributemap { return ParserUtil.merge_attributes(m,a) }
  / a:attribute { return ParserUtil.merge_attributes({}, a); }

attribute
  = name:literal values:attribute_value? space? {
    return {
      name: name,
      value: values === null ? [] : values
    };
  }

attribute_value
  = "=\"" v:attribute_values_list "\"" {
    return v;
  }

attribute_values_list
  = lit:attribute_item lst:attribute_values_list { return [lit].concat(lst); }
  / lit:attribute_item { return [lit] }

attribute_item
  = letters:[^ ^"]+ space? { return letters.join(""); }


functioncall
  = "@" invert:"!"? functionname:module "()" {
    var variable = ParserUtil.make_variable(functionname);
    variable['type'] = 'funcall';
    variable['inverted'] = invert ? true : false;
    return variable;
  }

iteration
 = "@foreach" space? "(" + space? func:functioncall space "in" space "@" collection:module space? ")" {
    return {
      type: 'iteration',
      funcall: func,
      collection: ParserUtil.make_variable(collection)
    }
  }

elementannotation
  = i:iteration {
    return i;
  }
  / funcall:functioncall {
    return funcall;
  }

literallist
  = lit:literal lst:literallist { return [lit].concat(lst); }
  / lit:literal { return [lit] }

literal
  = letters:[a-zA-Z0-9_-]+ space? { return letters.join(""); }

space
  = chars:[ \n\t]+ {
    return "SPACE"
  }
